fix dropdown being covered

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -19,6 +19,11 @@ body, html, input, select, textarea {
   margin: 0;
 }
 
+body, html {
+  position: relative;
+  z-index: -5;
+}
+
 #main {
   display: flex;
   height: 100vh;
